--- a/vignettes/EventPointer.Rmd
+++ b/vignettes/EventPointer.Rmd
@@ -30,7 +30,7 @@ library(EventPointer)
 ```
 
 # Installation
-EventPointer can be installed from Bioconductor using the folloiwng lines:
+EventPointer can be installed from Bioconductor using the following lines:
 
 ```{r, eval=FALSE}
 source("http://www.bioconductor.org/biocLite.R")
@@ -108,7 +108,7 @@ This function takes a couple of hours to complete (depending on the computer), a
 2. .flat file : Used to build the corresponding CDF file.
 3. .CDF file: Output required for the aroma.affymetrix preprocessing pipeline.
 
-The following code chunks show examples on how to run the function using both Ensembl and Affymetrix GTF using example data included in the package. This data corresponds to the Affymetrix HTA 2.0 GTF represnting only the DONSON gene and the probes that are mapped to it.
+The following code chunks show examples on how to run the function using part of the Affymetrix GTF and the example data included in the package. This data corresponds to the Affymetrix HTA 2.0 GTF represnting only the DONSON gene and the probes that are mapped to it.
 
   Using Affymetrix GTF as reference transcriptome
 ```{r CDFGTF, eval=TRUE, warning=FALSE, collapse=TRUE}
@@ -143,9 +143,9 @@ Once the CDF file has been created, it can be used for the analysis of different
 
 ### aroma.affymetrix pre-processing pipeline
 
-As EventPointer relies on aroma.affymetrix. A pre-processing pipeline must be applied to the .cel files of the experiment. This procedure normalizes and summarizes the expression of the different probesets into single values.
+For microarray dataa, a pre-processing pipeline must be applied to the .cel files of the experiment.Usually this pre-processing is done using the aroma.affymetrix R package. This procedure normalizes and summarizes the expression of the different probesets into single values.
 
-The aroma.affymetrx R package provides usersr different functions to work with affymetric arrays. The functions are used to extract all the information contained in the .cel files and to do all the required pre-processing steps such as background correction, normalization and summarization. The pacakge requires a certain folder structure in order to work correctly. For more information about aroma.affymetrixvisit the webpage:[aroma project](http://www.aroma-project.org/) 
+The aroma.affymetrix R package provides users different functions to work with affymetrix arrays. The functions are used to extract all the information contained in the .cel files and to do all the required pre-processing steps such as background correction, normalization and summarization. The package requires a certain folder structure in order to work correctly. For more information about aroma.affymetrix visit the webpage:[aroma project](http://www.aroma-project.org/) 
 
 The following code chunk displays the pipeline used to get the results required by EventPointer after the pre-processing using aroma.affymetrix. The code is not intended to be a runable example, but just to show users the settings a functions that can be used. In order for users to have a runable example, the corrrespoding folder structure and files are required.
 
@@ -277,13 +277,13 @@ As we have updated the algorithm, we are currently working on the implementation
 
 # RNA-Seq analysis
 ## Overview of RNA-Seq
-*EventPointer* also is able to identify alternative splicing events from RNA-Seq data. The only required files are the corresponding .BAM files from the experiment. 
+*EventPointer* is also able to identify alternative splicing events from RNA-Seq data. The only required files are the corresponding .BAM files from the experiment. 
 
 In comparison with arrays, when dealing with sequencing data, the splicing graphs must contain all the elements that appear in each of the samples. For example, if we were analyzing an experiment that contains normal and tumoral samples, the isoforms in the normal samples might differ from the ones in the tumoral ones. To be able to identify if there is differential alternative splicing, the splicing graph must have the features that belong to the isoforms present in both conditions.
 
 Each time an experiment is analyzed with EventPointer, the complete process needs to be executed which may cause long waiting times to get the results. To avoid this issue, we have divided every step of the algorithm in different functions so as the user can reuse previous result and thus reduce computational time.
 
-For the examples in this part of the vignette, we will use .bam files depicted in the [SGSeq vignette ](https://www.bioconductor.org/help/course-materials/2015/BioC2015/SGSeqBioC2015.html) that correspond to paired-end RNA-seq data from four tumor and four normal colorectal samples, which are part of a data set published in [Seshagiri et al. 2012](http://dx.doi.org/10.1038/nature11282). As stated in [SGSeq vignette ](https://www.bioconductor.org/help/course-materials/2015/BioC2015/SGSeqBioC2015.html) the bam files only include reads mapping to a single gene of interest (FBXO31).
+For the examples in this part of the vignette, we will use .bam files depicted in the [SGSeq vignette ](https://www.bioconductor.org/help/course-materials/2015/BioC2015/SGSeqBioC2015.html) that correspond to paired-end RNA-seq data from four tumor and four normal colorectal samples, which are part of a data set published in [Seshagiri et al. 2012](http://dx.doi.org/10.1038/nature11282). As stated in [SGSeq vignette ](https://bioconductor.org/packages/release/bioc/vignettes/SGSeq/inst/doc/SGSeq.html) the bam files only include reads mapping to a single gene of interest (FBXO31).
 
 ## BAM Preparation
 
@@ -294,7 +294,7 @@ The function PrepareBam_EP transforms all the information found in the bam files
 - **Samples** : Name of the .bam files to be analyzed (Sample1.bam,Sample2.bam,...,etc)
 - **SamplePath**: Path where the bam files are stored
 - **Ref_Transc**: Reference transcriptome used to name the genes found. Options are: "Ensembl","UCSC" or "GTF".
-- **fileTransc**: Path to the GTF reference transcriptome ff Ref_Transc is "GTF".
+- **fileTransc**: Path to the GTF reference transcriptome if Ref_Transc is "GTF".
 - **cores**: Number of cores used for parallel processing
 - **Alpha**: Internal SGSeq parameter to include or exclude regions (See Advanced Use)
 
